# giflibrary-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json
public/: 404.html  about.html  gif.html  index.html  script.js  style.css
scripts/: caption_gif.py  test_caption_gif.py
scripts/fonts/: README.txt
src/: main.rs
