[package]
name = "giflibrary-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.18"
aws-sdk-s3 = "1.137.0"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie", "multipart"] }
base64 = "0.22.1"
chrono = "0.4.45"
dotenvy = "0.15.7"
hex = "0.4.3"
image = "0.25.10"
mime_guess = "2.0.5"
rand = "0.10.2"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "cors"] }
